<resources>
    <string name="app_name">VisuBee</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_version">Version: %s</string>
    <string name="save_processed_image">Save Processed Image</string>
    <string name="process_image">Process Image</string>
    <string name="threshold_2">Threshold 2</string>
    <string name="threshold_1">Threshold 1</string>
    <string name="brightness">Brightness</string>
    <string name="tolerance">Tolerance</string>
    <string name="image_size">Image Size</string>
    <string name="select_background">Select Background</string>
    <string name="select_image">Select Image</string>
    <string name="sav_file_name">Saved file name</string>
    <string name="gallery_path">Gallery Path</string>
    <string name="choose_save_location">Choose Save Location</string>
    <string name="save_settings">Save Settings</string>
    <string name="welcome_to_visubee">Welcome to VisuBee!</string>
    <string name="this_app">This app allows you to process images, change settings, and view a gallery using Jetpack and OpenCV.</string>
    <string name="processing_select">🔹 Processing: Select and process images.\n🔹 Settings: Customize app preferences.\n🔹 Gallery: View saved images.\n🔹 About: Learn more about this app.</string>
    <string name="license_mit">This project is open-source under the MIT License.</string>
    <string name="license_opencv">This app uses OpenCV, licensed under the Apache License 2.0.</string>
    <string name="license_gentium">This app includes the Gentium Plus font, licensed under the SIL Open Font License.</string>
    <string name="license_glide">This app uses Glide for image loading, licensed under the BSD 2-Clause License.</string>
    <string name="license_more_info">For full license details, visit: https://github.com/nathabee/extraction-app</string>
    <string name="powered_by">Powered by OpenCV and Android Studio, Jetpack Navigation, Material Components, and DataStore</string>
    <string name="developed_by">Developed by: Nathabee, inspired by ChatGPT collaboration.</string>
    <string name="version">Version XX</string>
    <string name="visubee">VisuBee</string>
    <string name="test_theme">Test theme</string>
</resources>
