<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visubee"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingBottom="8dp"/>

    <TextView
        android:id="@+id/textVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developed_by"
        android:paddingTop="16dp"/>

    <TextView
        android:id="@+id/textLibraries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powered_by"/>

    <TextView
        android:id="@+id/textLicense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/license_mit"
        android:paddingTop="16dp"/>


    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:src="@drawable/beebot_da_vinci" />
</LinearLayout>
