<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Spinner
        android:id="@+id/spinner_image_size"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

    <EditText
        android:id="@+id/edit_gallery_path"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/gallery_path"
        android:focusable="true"
        android:clickable="true"/>

    <Button
        android:id="@+id/button_choose_path"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/choose_save_location"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/save_settings"/>

</LinearLayout>
