<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:id="@+id/textHomeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_visubee"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/textHomeDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_app"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/textHomeInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/processing_select"
        android:padding="16dp"/>


</LinearLayout>
